# hip3-funding-bot

./: .env.example  .gitignore  CLAUDE.md  hip3-funding-bot-spec.md  pyproject.toml  requirements.txt
docs/: RESUME.md
docs/superpowers/plans/: 2026-05-09-hip3-funding-bot.md  2026-05-10-hip3-funding-bot-v1.1-migration.md
hip3_bot/: __init__.py  _ostium_router.py  alerts.py  bot.py  config.py  data_feed.py  db.py  execution.py  main.py  models.py  ostium_adapter.py  ostium_feed.py  reporting.py  risk.py  signals.py
tests/: conftest.py  test_data_feed.py  test_db.py  test_execution.py  test_main.py  test_ostium_feed.py  test_ostium_router.py  test_reporting.py  test_risk.py  test_signals.py
